tests/iterable/iterable.exp
Error ----------------------------------------------------------------------------------------------------- array.js:7:2

Cannot cast array literal to `Iterable` because in property `@@iterator`, the return value, and then type argument
`Yield` [1]; string [2] is incompatible with number [3].

   array.js:7:2
     7| (["hi"]: Iterable<number>); // Error string ~> number
         ^^^^^^

References:
   <BUILTINS>/core.js:496:22
   496| interface $Iterator<+Yield,+Return,-Next> {
                             ^^^^^ [1]
   array.js:7:3
     7| (["hi"]: Iterable<number>); // Error string ~> number
          ^^^^ [2]
   array.js:7:19
     7| (["hi"]: Iterable<number>); // Error string ~> number
                          ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- array.js:8:2

Cannot cast array literal to `Iterable` because in property `@@iterator`, the return value, and then type argument
`Yield` [1]; number [2] is incompatible with string [3].

   array.js:8:2
     8| (["hi", 1]: Iterable<string>); // Error number ~> string
         ^^^^^^^^^

References:
   <BUILTINS>/core.js:496:22
   496| interface $Iterator<+Yield,+Return,-Next> {
                             ^^^^^ [1]
   array.js:8:9
     8| (["hi", 1]: Iterable<string>); // Error number ~> string
                ^ [2]
   array.js:8:22
     8| (["hi", 1]: Iterable<string>); // Error number ~> string
                             ^^^^^^ [3]


Error --------------------------------------------------------------------------------------------- caching_bug.js:21:79

Cannot return `x` because in property `@@iterator`, the return value, and then type argument `Yield` [1]; number [2] is
incompatible with string [3].

   caching_bug.js:21:79
    21| function miss_the_cache(x: Array<string | number>): Iterable<string> { return x; }
                                                                                      ^

References:
   <BUILTINS>/core.js:496:22
   496| interface $Iterator<+Yield,+Return,-Next> {
                             ^^^^^ [1]
   caching_bug.js:21:43
    21| function miss_the_cache(x: Array<string | number>): Iterable<string> { return x; }
                                                  ^^^^^^ [2]
   caching_bug.js:21:62
    21| function miss_the_cache(x: Array<string | number>): Iterable<string> { return x; }
                                                                     ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------- iterator_result.js:23:16

Cannot return object literal because in property `done`, boolean [1] is incompatible with boolean literal `false` [2].

   iterator_result.js:23:16
    23|         return { done, value: "still going..." }; // Error string ~> void
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   iterator_result.js:17:40
    17| function makeIterator(coin_flip: () => boolean ): Iterator<string> {
                                               ^^^^^^^ [1]
   <BUILTINS>/core.js:494:13
   494|   | { done: false, +value: Yield };
                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------- iterator_result.js:25:16

Cannot return object literal because in property `done`, boolean [1] is incompatible with boolean literal `true` [2].

   iterator_result.js:25:16
    25|         return { done }; // Error void ~> string
                       ^^^^^^^^

References:
   iterator_result.js:17:40
    17| function makeIterator(coin_flip: () => boolean ): Iterator<string> {
                                               ^^^^^^^ [1]
   <BUILTINS>/core.js:493:13
   493|   | { done: true, +value?: Return }
                    ^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- map.js:14:10

Cannot return `map` because in property `@@iterator`, the return value, and then type argument `Yield` [1]; tuple
type [2] is incompatible with string [3].

   map.js:14:10
    14|   return map;
                 ^^^

References:
   <BUILTINS>/core.js:496:22
   496| interface $Iterator<+Yield,+Return,-Next> {
                             ^^^^^ [1]
   <BUILTINS>/core.js:541:28
   541|     @@iterator(): Iterator<[K, V]>;
                                   ^^^^^^ [2]
   map.js:13:55
    13| function mapTest4(map: Map<number, string>): Iterable<string> {
                                                              ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- set.js:14:10

Cannot return `set` because in property `@@iterator`, the return value, and then type argument `Yield` [1]; string [2]
is incompatible with number [3].

   set.js:14:10
    14|   return set;
                 ^^^

References:
   <BUILTINS>/core.js:496:22
   496| interface $Iterator<+Yield,+Return,-Next> {
                             ^^^^^ [1]
   set.js:13:28
    13| function setTest4(set: Set<string>): Iterable<number> {
                                   ^^^^^^ [2]
   set.js:13:47
    13| function setTest4(set: Set<string>): Iterable<number> {
                                                      ^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- string.js:5:2

Cannot cast `"hi"` to `Iterable` because in property `@@iterator`, the return value, and then type argument `Yield` [1];
string [2] is incompatible with number [3].

   string.js:5:2
     5| ("hi": Iterable<number>); // Error - string is a Iterable<string>
         ^^^^

References:
   <BUILTINS>/core.js:496:22
   496| interface $Iterator<+Yield,+Return,-Next> {
                             ^^^^^ [1]
   <BUILTINS>/core.js:288:28
   288|     @@iterator(): Iterator<string>;
                                   ^^^^^^ [2]
   string.js:5:17
     5| ("hi": Iterable<number>); // Error - string is a Iterable<string>
                        ^^^^^^ [3]



Found 8 errors
